fix: layout overflow scroll and expand on hover rail width

--- a/packages/vuetify/src/components/VAppBar/VAppBar.sass
+++ b/packages/vuetify/src/components/VAppBar/VAppBar.sass
@@ -10,11 +10,14 @@
   overflow: hidden
   padding-left: $app-bar-padding-start
   padding-right: $app-bar-padding-end
-  position: relative
+  position: fixed
   transition: $app-bar-transition
 
   @include border($app-bar-border...)
   @include rounded($app-bar-border-radius)
+
+  &--absolute
+    position: absolute
 
   &--is-active
     @include elevation($app-bar-elevation)
